[gd_scene load_steps=4 format=3 uid="uid://bxfqbfg0v2tl"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_wr8qb"]

[sub_resource type="LabelSettings" id="LabelSettings_lyw8r"]
font_size = 138

[sub_resource type="LabelSettings" id="LabelSettings_u7vv3"]
font_size = 97

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wr8qb")

[node name="GameoverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameoverLabel" type="Label" parent="GameoverMenu"]
offset_left = 142.0
offset_top = 408.0
offset_right = 938.0
offset_bottom = 600.0
text = "Game Over"
label_settings = SubResource("LabelSettings_lyw8r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameoverMenu"]
offset_left = 358.0
offset_top = 1240.0
offset_right = 722.0
offset_bottom = 1355.0
theme_override_font_sizes/font_size = 75
text = "Restart"

[node name="LevelClearedMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NextLevelLabel" type="Label" parent="LevelClearedMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -486.0
offset_top = -504.0
offset_right = 486.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Cleared!!"
label_settings = SubResource("LabelSettings_u7vv3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevelButton" type="Button" parent="LevelClearedMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = 191.0
offset_right = 114.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 79
text = "Next"

[connection signal="button_down" from="GameoverMenu/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="LevelClearedMenu/NextLevelButton" to="." method="_on_next_level_button_button_down"]
